<resources>
    <string name="register_password_tip">设置6至16位登录密码</string>
    <string name="register_sms_code_tip">请输入短信验证码</string>
    <string name="register_phone_tip">请输入手机号码</string>
    <string name="register_username_tip">请输入用户名</string>
    <string name="register_password_again_tip">请再次输入登录密码</string>
    <string name="register">注册</string>
    <string name="have_account_to_login">已有账号，立即登录</string>
    <string name="reset_input_phone_tip">须符合11位大陆手机号格式</string>
    <string name="submit">提交</string>
    <string name="login">登录</string>
    <string name="reset_password">重置密码</string>
    <string name="login_input_password">请输入登录密码</string>
</resources>