<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.RegisterActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="108dp"
            android:layout_height="28dp"
            android:layout_marginTop="62dp"
            android:src="@drawable/icon_jd_jz" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:textColor="#000000"
            android:textSize="27sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="61dp"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="61dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/register_username_tip"
            android:paddingStart="7dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_telephone"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="61dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="61dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/register_phone_tip"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingStart="7dp"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="61dp">

            <EditText
                android:id="@+id/et_sms_code"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/login_edittext_bg"
                android:hint="@string/register_sms_code_tip"
                android:inputType="number"
                android:maxLength="6"
                android:paddingStart="7dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_send_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:text="发送验证码"
                android:textColor="#FFF2682A"
                android:textSize="10dp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="61dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="61dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/register_password_tip"
            android:maxLength="16"
            android:paddingStart="7dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_password_again"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="61dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="61dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/register_password_again_tip"
            android:maxLength="16"
            android:paddingStart="7dp"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/cb_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="61dp"
            android:checked="true"
            android:text="勾选同意《用户服务协议》"
            android:textColor="#FFAAAAAA"
            android:textSize="10dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.css.base.view.RoundTextView
        android:id="@+id/tv_register_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/tv_to_login"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="6dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:rv_backgroundColor="#FFF2682A"
        app:rv_cornerRadius="164dp" />

    <TextView
        android:id="@+id/tv_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp"
        android:text="@string/have_account_to_login"
        android:textColor="#FFF2682A"
        android:textSize="10dp" />
</RelativeLayout>