<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.ResetPasswordActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="108dp"
            android:layout_height="28dp"
            android:layout_marginTop="62dp"
            android:src="@mipmap/wonder_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/reset_password"
            android:textColor="#000000"
            android:textSize="27sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="51dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/register_phone_tip"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingStart="7dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_phone_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="51dp"
            android:text="@string/reset_input_phone_tip"
            android:textColor="#FFFF0000"
            tools:visibility="visible"
            android:visibility="invisible"
            android:textSize="9dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="51dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/register_password_tip"
            android:maxLength="16"
            android:paddingStart="7dp"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/tv_password_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="51dp"
            android:text="密码限6至16位数字、大小写英文字母、下划线的任意组合"
            android:textColor="#FFFF0000"
            android:textSize="9dp"
            tools:visibility="visible"
            android:visibility="invisible" />
        <EditText
            android:id="@+id/et_password_again"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="51dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/register_password_again_tip"
            android:maxLength="16"
            android:paddingStart="7dp"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/tv_password_again_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="51dp"
            android:text="两次输入密码需保持一致"
            android:textColor="#FFFF0000"
            android:textSize="9dp"
            tools:visibility="visible"
            android:visibility="invisible" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="51dp">

            <EditText
                android:id="@+id/et_sms_code"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/login_edittext_bg"
                android:hint="@string/register_sms_code_tip"
                android:inputType="number"
                android:maxLength="6"
                android:paddingStart="7dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_send_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:text="发送验证码"
                android:textColor="#FFF2682A"
                android:textSize="10dp" />
        </RelativeLayout>
        <TextView
        android:id="@+id/tv_code_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="51dp"
        android:text="验证码为6位数字"
        android:textColor="#FFFF0000"
        android:textSize="9dp"
        tools:visibility="visible"
        android:visibility="invisible" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.css.base.view.RoundTextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="95dp"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:rv_backgroundColor="#FFF2682A"
        app:rv_cornerRadius="164dp" />
</RelativeLayout>